// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentWithBranch with show matches snapshot 1`] = `
<div>
  <div>
    The part everyone sees...
  </div>
  <div>
    The part that only some see...
  </div>
</div>
`;

exports[`ComponentWithBranch without show matches snapshot 1`] = `
<div>
  <div>
    The part everyone sees...
  </div>
</div>
`;
